--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.sql.init.mode=never
 spring.cache.type=simple
 
 # Google Maps API Key
-google.maps.api.key= Api_Key
+google.maps.api.key=API_KEY
